updated outlier correlation slides

--- a/Notebooks/Outlier_Correlation_StatisticalAnalysis.ipynb
+++ b/Notebooks/Outlier_Correlation_StatisticalAnalysis.ipynb
@@ -8,10 +8,10 @@
     "\n",
     "By the end of this lesson, students will be able to:\n",
     "\n",
-    "- Describe what is outlier and how to remove outlier for univariate data\n",
-    "- Visualize the outliers by box-plot\n",
-    "- Describe how can fit mixture of Gaussian to fit the data distribution\n",
-    "- Learn what is correlation and visualize the correlation among features"
+    "- Describe an outlier and how to remove outliers for univariate data\n",
+    "- Visualize the outliers through box-plots\n",
+    "- Describe how to use a Gaussian Mixture Model to fit a data distribution\n",
+    "- Understand correlation and visualize the correlation amongst features"
    ]
   },
   {
@@ -20,9 +20,9 @@
    "source": [
     "## Outlier Detection\n",
     "\n",
-    "- Outliers are extreme values that can skew our dataset, sometimes giving us an incorrect picture of how things actually are in our dataset. \n",
+    "- **Outliers** are extreme values that can skew our dataset, sometimes giving us an incorrect picture of how things actually are in our dataset. \n",
     "\n",
-    "- The hardest part of this is determining which data points are acceptable, and which ones constitute \"outlier\" status."
+    "- The hardest part of this is determining which data points are acceptable, and which ones constitute as \"outliers\"."
    ]
   },
   {
@@ -31,11 +31,11 @@
    "source": [
     "## Activity: find and remove outliers if our dataset is Normal\n",
     "\n",
-    "When our sample data is close to normal distribution, the samples that be outside of three standard deviation can be considered as outliers.\n",
+    "When our sample data is close to normal distribution, the samples that are _over three standard deviations away_ can be considered outliers.\n",
     "\n",
-    "Task: Write a function that first find outliers for a normally distributed data, then remove them.\n",
+    "**Task**: Write a function that first finds outliers for a normally distributed data, then remove them.\n",
     "\n",
-    "Hint: Data samples that are below `mean - 3*std` and above `mean + 3*std` are outliers for Normal distribution "
+    "**Hint**: Data samples that are below `mean - 3*std` and above `mean + 3*std` are outliers for Normal distribution "
    ]
   },
   {
@@ -63,9 +63,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interquartile range (IQR) for finding and removing outlier when data has any distribution\n",
+    "## Interquartile range (IQR)\n",
     "\n",
-    "Tukey suggested to calculate the range between the first quartile (25%) and third quartile (75%) in the data, called the interquartile range (IQR)."
+    "We use IQR for finding and removing outliers when the data has any kind of distribution\n",
+    "\n",
+    "[John Tukey](https://en.wikipedia.org/wiki/John_Tukey) suggested to _calculate the range between the first quartile (25%) and third quartile (75%) in the data_, which is  the IQR."
    ]
   },
   {
@@ -74,9 +76,9 @@
    "source": [
     "## Activity:  IQR outlier detection and removal\n",
     "\n",
-    "Task: write a function to find and remove outliers based on IQR method for this data sample:\n",
+    "**Task**: write a function to find and remove outliers based on IQR method for this data sample:\n",
     "\n",
-    "Hint: \n",
+    "**Hint**: \n",
     "\n",
     "$Q_1$ is the first quartile (25%) \n",
     "\n",
@@ -134,7 +136,7 @@
    "source": [
     "## How we can visualy see the outlier?\n",
     "\n",
-    "Answer: Box plot use the IQR method to display data and outliers"
+    "**Answer**: Box plot use the IQR method to display data and outliers"
    ]
   },
   {
@@ -167,15 +169,14 @@
    "source": [
     "## Correlation \n",
     "\n",
-    "Correlation is used to test relationships between quantitative variables\n",
+    "**Correlation** is used to _test relationships between quantitative variables_\n",
     "\n",
     "Some examples of data that have a high correlation:\n",
     "\n",
-    "1- Your caloric intake and your weight\n",
+    "1. Your caloric intake and your weight\n",
+    "1. The amount of time your study and your GPA\n",
     "\n",
-    "2- The amount of time your study and your GPA\n",
-    "\n",
-    "Question: what is negative correlation?\n",
+    "**Question**: what is negative correlation?\n",
     "\n",
     "Correlations are useful because we can find out what relationship variables have, we can make predictions about future behavior. "
    ]
@@ -186,21 +187,14 @@
    "source": [
     "## Activity: Obtain the correlation among all features of iris dataset\n",
     "\n",
-    "1- Review the iris dataset. What are the features? \n",
-    "\n",
-    "2- Eliminate two columns `['Id', 'Species']`\n",
-    "\n",
-    "3- Compute the correlation among all features. \n",
-    "\n",
-    "Hint: Use `df.corr()`\n",
-    "\n",
-    "4- Plot the correlation by heatmap and corr plot in Seaborn -> `sns.heatmap`, `sns.corrplot`\n",
-    "\n",
-    "5- Write a function that computes the correlation (Pearson formula)\n",
-    "\n",
-    "Hint: https://en.wikipedia.org/wiki/Pearson_correlation_coefficient\n",
-    "\n",
-    "6- Compare your answer with `scipy.stats.pearsonr` for any given two features"
+    "1. Review the iris dataset. What are the features? \n",
+    "1. Eliminate two columns `['Id', 'Species']`\n",
+    "1. Compute the correlation among all features.\n",
+    "    1. **Hint**: Use `df.corr()`\n",
+    "1. Plot the correlation by heatmap and corr plot in Seaborn -> `sns.heatmap`, `sns.corrplot`\n",
+    "1. Write a function that computes the correlation (Pearson formula)\n",
+    "    1. **Hint**: https://en.wikipedia.org/wiki/Pearson_correlation_coefficient\n",
+    "1. Compare your answer with `scipy.stats.pearsonr` for any given two features"
    ]
   },
   {
@@ -255,9 +249,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"Images/iris_vis.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Statistical Analysis\n",
     "\n",
-    "Approxite the histogram of data with combination of Gaussian (Normal) distribution functions:\n",
+    "We can approxite the histogram of a dataset with a combination of Gaussian (Normal) distribution functions:\n",
     "\n",
     "    Gaussian Mixture Model (GMM)\n",
     "    \n",
@@ -270,9 +271,9 @@
    "source": [
     "## What is the goal for using GMM?\n",
     "\n",
-    "- We want to appriximate the density (histogram) of any given data sample with combination of Normal Distribition\n",
+    "- We want to appriximate the density (histogram) of any given data sample with a combination of Normal Distribitions\n",
     "\n",
-    "- How many Normal Distribution we need is defined by us (2 or 3 or 4,...)"
+    "- How many Normal Distributions we need is defined by us (2 or 3 or 4,...)"
    ]
   },
   {
@@ -283,7 +284,7 @@
     "\n",
     "Task: \n",
     "\n",
-    "1- Generate the concatination of the random variables as follows:\n",
+    "1. Generate the concatination of the random variables as follows:\n",
     "\n",
     "`x_1 = np.random.normal(-5, 1, 3000)`\n",
     "\n",
@@ -291,15 +292,17 @@
     "\n",
     "`x = np.concatenate((x_1, x_2))`\n",
     "\n",
+    "2. Plot the histogram of `x`\n",
+    "3. Obtain the weights, mean and variances of each Gassuian\n",
     "\n",
-    "2- Plot the histogram of `x`\n",
+    "You will need to use the following in your solution: \n",
+    "```python\n",
+    "from sklearn import mixture\n",
     "\n",
-    "3- Obtain the weights, mean and variances of each Gassuian\n",
-    "\n",
-    "Steps needed: \n",
-    "`from sklearn import mixture \n",
     "gmm = mixture.GaussianMixture(n_components=2)\n",
-    "gmm.fit(x.reshape(-1,1))`"
+    "\n",
+    "gmm.fit(x.reshape(-1,1))\n",
+    "```"
    ]
   },
   {
@@ -356,7 +359,7 @@
    "source": [
     "## The GMM has learned the probability density function of our data sample\n",
     "\n",
-    "Lets the model generate sample from it model:\n",
+    "Let's generate the samples from the GMM:\n",
     "\n"
    ]
   },
@@ -388,7 +391,7 @@
    "source": [
     "## Question: Are the samples in z and x the same?\n",
     "\n",
-    "- Not their samples but We know that pdf of x and pdf of z are the same"
+    "- Not their samples, but we know that the _pdf of x and the pdf of z are the same_"
    ]
   },
   {
@@ -397,9 +400,9 @@
    "source": [
     "## Kernel Density Estimation (KDE)\n",
     "\n",
-    "Kernel density estimation (KDE) is a non-parametric way to estimate the probability density function of a data sample. In other words the aim of KDE is to find probability density function (PDF) for a given data sample.\n",
+    "**Kernel density estimation (KDE)** is a non-parametric way to estimate the Probability Density Function (PDF) of a data sample. In other words _the goal of KDE is to find PDF for a given data sample._\n",
     "\n",
-    "Approximate the pdf of dataset:\n",
+    "We can use the below formula to approximate the PDF of the dataset:\n",
     "\n",
     "$p(x) = \\frac{1}{Nh}\\sum_{i = 1}^{N} \\ K(\\frac{x - x_i}{h})$\n",
     "\n",
@@ -412,9 +415,9 @@
    "source": [
     "## Activity: Apply KDE on a given data sample\n",
     "\n",
-    "Task: Apply KDE on previous generated sample data `x`\n",
+    "**Task**: Apply KDE on the previously generated sample data `x`\n",
     "\n",
-    "Hint: use \n",
+    "**Hint**: use \n",
     "\n",
     "`kde = KernelDensity(kernel='gaussian', bandwidth=0.6)`"
    ]
@@ -462,7 +465,7 @@
    "source": [
     "## The KDE has learned the probability density function of our data sample\n",
     "\n",
-    "Lets the model generate sample from it model:"
+    "Let's generate the samples from the KDE:"
    ]
   },
   {
@@ -502,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
