--- a/Notebooks/Outlier_Correlation_StatisticalAnalysis.ipynb
+++ b/Notebooks/Outlier_Correlation_StatisticalAnalysis.ipynb
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"Images/iris_vis.jpg\">"
+    "<img src=\"./Images/iris_vis.jpg\">"
    ]
   },
   {
