--- a/Notebooks/Outlier_Correlation_StatisticalAnalysis.ipynb
+++ b/Notebooks/Outlier_Correlation_StatisticalAnalysis.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "## Activity: find and remove outliers if our dataset is Normal\n",
     "\n",
-    "When our sample data is close to normal distribution, the samples that are _over three standard deviations away_ can be considered outliers.\n",
+    "When our sample data is close to normal distribution, the samples that are _three standard deviations away from the mean_ can be considered outliers.\n",
     "\n",
     "**Task**: Write a function that first finds outliers for a normally distributed data, then remove them.\n",
     "\n",
