--- a/Notebooks/Outlier_Correlation_StatisticalAnalysis.ipynb
+++ b/Notebooks/Outlier_Correlation_StatisticalAnalysis.ipynb
@@ -194,7 +194,9 @@
     "1. Plot the correlation by heatmap and corr plot in Seaborn -> `sns.heatmap`, `sns.corrplot`\n",
     "1. Write a function that computes the correlation (Pearson formula)\n",
     "    1. **Hint**: https://en.wikipedia.org/wiki/Pearson_correlation_coefficient\n",
-    "1. Compare your answer with `scipy.stats.pearsonr` for any given two features"
+    "1. Compare your answer with `scipy.stats.pearsonr` for any given two features\n",
+    "\n",
+    "<img src=\"./Images/iris_vis.jpg\">"
    ]
   },
   {
@@ -243,13 +245,6 @@
     "\n",
     "print(pearson_corr(df['SepalLengthCm'], df['PetalLengthCm']))\n",
     "print(scipy.stats.pearsonr(df['SepalLengthCm'], df['PetalLengthCm']))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"./Images/iris_vis.jpg\">"
    ]
   },
   {
