--- a/Notebooks/PDF_CDF_Normal.ipynb
+++ b/Notebooks/PDF_CDF_Normal.ipynb
@@ -138,16 +138,14 @@
     "def custom_hist(ls, num_interval):\n",
     "    hist_ls_dict = dict()\n",
     "    # minimum value in ls\n",
-    "    min_ls = np.min(ls)\n",
+    "    ...\n",
     "    # maximum value in ls\n",
-    "    max_ls = np.max(ls)\n",
-    "    print(max_ls)\n",
-    "    # I = Interval\n",
-    "    I = ((max_ls - min_ls) / num_interval)\n",
-    "    print(I)\n",
+    "    ...\n",
+    "    # Interval\n",
+    "    ...\n",
     "    for j in range(num_interval):\n",
     "        # Create how many elements in ls are at each interval j\n",
-    "        hist_ls_dict[(min_ls + j*I, min_ls + (j+1) *I)]= np.sum(((min_ls + j*I) <=ls) & (ls <= (min_ls + (j+1) *I)))      \n",
+    "        hist_ls_dict[...]= ...  \n",
     "    return hist_ls_dict\n",
     "        \n",
     "print(custom_hist(df['Age'].dropna().values, 16))"
@@ -574,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
