--- a/Homework/HW1_Pandas.ipynb
+++ b/Homework/HW1_Pandas.ipynb
@@ -38,7 +38,7 @@
     "    hist_ls_dict = dict()\n",
     "    min_ls = np.min(ls)\n",
     "    max_ls = np.max(ls)\n",
-    "    I = np.ceil((max_ls - min_ls) / interval)\n",
+    "    I = (max_ls - min_ls) / interval\n",
     "    for j in range(...):\n",
     "        hist_ls_dict[j]= ...      \n",
     "    return hist_ls_dict\n",
