--- a/Notebooks/Data_Analysis_Intro.ipynb
+++ b/Notebooks/Data_Analysis_Intro.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## What is Data Science?\n",
     "\n",
-    "- Lets watch this good video : https://www.youtube.com/watch?v=KdgQvgE3ji4&t=217s\n",
+    "- This is a good video summarizing data science : https://www.youtube.com/watch?v=KdgQvgE3ji4&t=217s\n",
     "\n",
     "<img src=\"Images/DS_process.png\" width=\"600\" height=\"600\">"
    ]
@@ -32,7 +36,7 @@
     "\n",
     "    - **Data analysis**. Example: the telecom churn dataset is given, we want to obtain what is the percentage of loyal and non-loyal customers, which state has the highest churn customers, What is the maximum length of international calls among loyal users (Churn == 0) who do not have an international plan?\n",
     "    \n",
-    "    - **Data analysis and visualization**. Normally comparison by plotting the result which is easier for human than reading raw numbers\n",
+    "    - **Data analysis and visualization**. Normally comparison is shwon by plotting results which is easier for humans than reading raw numbers\n",
     "    \n",
     "    - **Statistical analysis on the data**. Example: the titanic dataset is given, at specific \"Embark\" what is the distibution of male passengers over all age (were they mainly young, middle age or old)\n",
     "    \n",
@@ -168,6 +172,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Pandas Dataframe\n",
+    "\n",
+    "The Pandas DataFrame, often abbreviated as df, is a 2-D labeled data structure with columns of potentially different type. It let's us easily select and manipulate data.\n",
+    "\n",
+    "You can think of a dataframe as a programmatic excel spreadsheet. Here is a good intro to pandas dataframes: https://towardsdatascience.com/pandas-dataframe-a-lightweight-intro-680e3a212b96\n",
+    "\n",
+    "## Activity: Live Demo\n",
+    "\n",
+    "Let's use the cell above to explore some fundamental dataframe methods and properties."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Applications of Data Analysis\n",
     "\n",
     "Here are some example applications of Data Analysis in the real world:\n",
@@ -259,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
