update with pokemon

--- a/Notebooks/Data_Analysis_Intro.ipynb
+++ b/Notebooks/Data_Analysis_Intro.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "233"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,6 +218,125 @@
     "## Activity: Live Demo\n",
     "\n",
     "Let's use the cell above to explore some fundamental dataframe methods and properties."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>87</td>\n",
+       "      <td>Dewgong</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Ice</td>\n",
+       "      <td>475</td>\n",
+       "      <td>90</td>\n",
+       "      <td>70</td>\n",
+       "      <td>80</td>\n",
+       "      <td>70</td>\n",
+       "      <td>95</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>91</td>\n",
+       "      <td>Cloyster</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Ice</td>\n",
+       "      <td>525</td>\n",
+       "      <td>50</td>\n",
+       "      <td>95</td>\n",
+       "      <td>180</td>\n",
+       "      <td>85</td>\n",
+       "      <td>45</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>131</td>\n",
+       "      <td>Lapras</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Ice</td>\n",
+       "      <td>535</td>\n",
+       "      <td>130</td>\n",
+       "      <td>85</td>\n",
+       "      <td>80</td>\n",
+       "      <td>85</td>\n",
+       "      <td>95</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       #      Name Type 1 Type 2  Total   HP  Attack  Defense  Sp. Atk  \\\n",
+       "94    87   Dewgong  Water    Ice    475   90      70       80       70   \n",
+       "98    91  Cloyster  Water    Ice    525   50      95      180       85   \n",
+       "142  131    Lapras  Water    Ice    535  130      85       80       85   \n",
+       "\n",
+       "     Sp. Def  Speed  Generation  Legendary  \n",
+       "94        95     70           1      False  \n",
+       "98        45     70           1      False  \n",
+       "142       95     60           1      False  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"pokemon.csv\")\n",
+    "\n",
+    "df[(df['Type 1'] == 'Water') & (df['Type 2'] == 'Ice')]"
    ]
   },
   {
@@ -256,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +391,7 @@
     "\n",
     "import csv\n",
     "\n",
-    "with open('titanic.csv') as csv_file:\n",
+    "with open('Datasets/titanic.csv') as csv_file:\n",
     "    csv_reader = csv.reader(csv_file, delimiter=',')\n",
     "    gender_ls = []\n",
     "    survive_ls = []\n",
