--- a/Notebooks/Pandas_Intro.ipynb
+++ b/Notebooks/Pandas_Intro.ipynb
@@ -272,7 +272,7 @@
     }
    ],
    "source": [
-    "df[['num_pets', 'age', 'state']] #we can select more than one column by providing a list of the column names"
+    "type.df[['num_pets', 'age', 'state']] #we can select more than one column by providing a list of the column names"
    ]
   },
   {
@@ -2874,7 +2874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
