--- a/Notebooks/Pandas_Titanic.ipynb
+++ b/Notebooks/Pandas_Titanic.ipynb
@@ -3814,7 +3814,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Midterm Project] (https://docs.google.com/document/d/11v_d1bkFbTM4N3WU6JAbdR_9_eUChrN32-mdQ9zKaOw/preview)"
+    "## Midterm Project\n",
+    "\n",
+    "Project instructions can be found [here](https://docs.google.com/document/d/11v_d1bkFbTM4N3WU6JAbdR_9_eUChrN32-mdQ9zKaOw/preview)"
    ]
   },
   {
