--- a/Notebooks/Pandas_Merge_Concatenate.ipynb
+++ b/Notebooks/Pandas_Merge_Concatenate.ipynb
@@ -18,12 +18,12 @@
    "source": [
     "## Combine Dataset in Pandas \n",
     "\n",
-    "- Create two dataframes that have common columns, say ${\\bf x}_1$"
+    "- Create two dataframes that have common columns, say ${\\bf x}_1$ is the column they have in common"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,12 +178,24 @@
    "metadata": {},
    "source": [
     "### Merge adf and bdf based on adf\n",
-    "Documenation for the [merge](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html) method in Pandas"
+    "Documenation for the [merge](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html) method in Pandas\n",
+    "\n",
+    "Merge DataFrame or named Series objects with a database-style join. The join is done on columns or indexes.\n",
+    "\n",
+    "### how parameter \n",
+    "\n",
+    "left: use only keys from left frame, similar to a SQL left outer join; preserve key order.\n",
+    "\n",
+    "right: use only keys from right frame, similar to a SQL right outer join; preserve key order.\n",
+    "\n",
+    "outer: use union of keys from both frames, similar to a SQL full outer join; sort keys lexicographically.\n",
+    "\n",
+    "inner: use intersection of keys from both frames, similar to a SQL inner join; preserve the order of the left keys."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -242,13 +254,15 @@
        "2  C   3  NaN"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.merge(adf, bdf, how='left')"
+    "pd.merge(adf, bdf, how='left')\n",
+    "\n",
+    "#There's no C in bdf so corresponding value in merged x3 is NaN"
    ]
   },
   {
@@ -325,7 +339,9 @@
     }
    ],
    "source": [
-    "pd.merge(adf, bdf, how= 'right')"
+    "pd.merge(adf, bdf, how= 'right')\n",
+    "\n",
+    "#no D in adf so corresponding value in merged x2 is NaN"
    ]
   },
   {
@@ -337,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -389,13 +405,13 @@
        "1  B   2  F"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.merge(adf, bdf, how= 'inner')"
+    "pd.merge(adf, bdf, how= 'inner') #intersection"
    ]
   },
   {
@@ -407,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -459,13 +475,13 @@
        "1  B   2  F"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.merge(adf, bdf)"
+    "pd.merge(adf, bdf) #default is inner"
    ]
   },
   {
@@ -549,7 +565,7 @@
     }
    ],
    "source": [
-    "pd.merge(adf, bdf, how= 'outer')"
+    "pd.merge(adf, bdf, how= 'outer') #union, NaN spaces where's there's not things in common"
    ]
   },
   {
@@ -661,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -686,45 +702,37 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>x1</th>\n",
-       "      <th>x2</th>\n",
        "      <th>x1</th>\n",
-       "      <th>x3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>A</td>\n",
-       "      <td>1</td>\n",
        "      <td>A</td>\n",
-       "      <td>T</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>B</td>\n",
-       "      <td>2</td>\n",
        "      <td>B</td>\n",
-       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>C</td>\n",
-       "      <td>3</td>\n",
        "      <td>D</td>\n",
-       "      <td>T</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  x1  x2 x1 x3\n",
-       "0  A   1  A  T\n",
-       "1  B   2  B  F\n",
-       "2  C   3  D  T"
+       "  x1 x1\n",
+       "0  A  A\n",
+       "1  B  B\n",
+       "2  C  D"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,12 +740,12 @@
    "source": [
     "# Column-wise concatenation \n",
     "# axis: whether we will concatenate along rows (0) or columns (1)\n",
-    "pd.concat([adf, bdf], axis=1)"
+    "newdf = pd.concat([adf, bdf], axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +808,7 @@
        "2  C   3  C  T"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +901,7 @@
        "2  C  NaN    T"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,23 +919,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ianbirnam/anaconda/lib/python3.7/site-packages/ipykernel_launcher.py:2: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=False'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
-      "\n",
-      "  \n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -974,19 +968,19 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>0</th>\n",
        "      <td>A</td>\n",
        "      <td>NaN</td>\n",
        "      <td>T</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1</th>\n",
        "      <td>B</td>\n",
        "      <td>NaN</td>\n",
        "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>2</th>\n",
        "      <td>C</td>\n",
        "      <td>NaN</td>\n",
        "      <td>T</td>\n",
@@ -1000,12 +994,12 @@
        "0  A  1.0  NaN\n",
        "1  B  2.0  NaN\n",
        "2  C  3.0  NaN\n",
-       "3  A  NaN    T\n",
-       "4  B  NaN    F\n",
-       "5  C  NaN    T"
+       "0  A  NaN    T\n",
+       "1  B  NaN    F\n",
+       "2  C  NaN    T"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,13 +1007,13 @@
    "source": [
     "# Correct the indexing after concatenation\n",
     "# ignore_index: whether or not the original row labels from should be retained\n",
-    "df = pd.concat([adf, cdf], ignore_index=True)\n",
+    "df = pd.concat([adf, cdf])\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1072,7 @@
        "2  C   3  T"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,12 +1087,18 @@
    "source": [
     "## When two dataframes have exactly the same columns\n",
     "\n",
-    "Documentation for the [append](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.append.html) method in Pandas"
+    "Documentation for the [append](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.append.html) method in Pandas\n",
+    "\n",
+    "Append rows of other to the end of caller, returning a new object.\n",
+    "\n",
+    "Columns in other that are not in the caller are added as new columns.\n",
+    "\n",
+    "[Difference between merge, concat, and append](https://www.reddit.com/r/learnpython/comments/6986nd/difference_between_concatenate_append_merge_in/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
        "3  7  8"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1187,9 @@
    "source": [
     "### Slicing dataframe based on the largest value for a specific column\n",
     "\n",
-    "Documentation for the [nlargest](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.nlargest.html) method in Pandas"
+    "Documentation for the [nlargest](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.nlargest.html) method in Pandas\n",
+    "\n",
+    "Return the first n rows ordered by columns in descending order."
    ]
   },
   {
@@ -1757,12 +1759,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### More Expercise\n",
+    "### More Resources\n",
     "\n",
     "- https://martin-thoma.com/pandas-merge-join-concatenate/\n",
     "\n",
     "- https://github.com/codebasics/py/blob/master/pandas/11_melt/pandas_melt_tutorial.ipynb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1781,7 +1790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
