Updated descriptive stats and template

--- a/Notebooks/Applied_Descriptive_Statistics.ipynb
+++ b/Notebooks/Applied_Descriptive_Statistics.ipynb
@@ -19,9 +19,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quiz\n",
+    "# Warmup\n",
     "\n",
-    "- What percent of passengers in Titanic embarked at C?\n",
+    "- What percent of passengers on the Titanic embarked at C?\n",
     "\n",
     "- What percent of female passengers in Titanic embarked at C?\n",
     "\n",
@@ -101,8 +101,7 @@
     "# TODO: Complete this function by having the function return the average value of our dataset.\n",
     "def compute_mean(dataset):\n",
     "    \"\"\" Main function that calculates the average value across our data. \"\"\"\n",
-    "    \n",
-    "    return sum(dataset)/len(dataset)\n",
+    "\n",
     "\n",
     "compute_mean(data)"
    ]
@@ -120,36 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27.276021505376345\n",
-      "27.276021505376345\n",
-      "27.276021505376345\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Solutions:\n",
-    "\n",
-    "import pandas as pd\n",
-    "df = pd.read_csv('Datasets/titanic.csv')\n",
-    "\n",
-    "    \n",
-    "print(df[(df['Survived'] == 1) & (df['Sex'] == 'male')]['Age'].mean())\n",
-    "\n",
-    "# or\n",
-    "\n",
-    "print(compute_mean(df[(df['Survived'] == 1) & (df['Sex'] == 'male')]['Age'].dropna().values))\n",
-    "\n",
-    "# or\n",
-    "\n",
-    "print(df[(df['Survived'] == 1) & (df['Sex'] == 'male')]['Age'].dropna().agg(compute_mean))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -560,6 +533,8 @@
    "source": [
     "# Percentile\n",
     "\n",
+    "The value below which a percentage of data falls.\n",
+    "\n",
     "## Activity - Compute 75% Percentile for Fare in Titanic\n",
     "We want to compute:\n",
     "\n",
@@ -588,14 +563,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "import pandas as pd\n",
-    "df = pd.read_csv('Datasets/titanic.csv')\n",
-    "\n",
-    "ls_fare = df['Fare'].dropna().values\n",
-    "\n",
-    "np.percentile(ls_fare, 75)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -647,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
