update probability lesson

--- a/Notebooks/Applied_Descriptive_Statistics.ipynb
+++ b/Notebooks/Applied_Descriptive_Statistics.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "14     32  City_C"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,6 +399,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "df = pd.DataFrame({'Rainy':[29,28,32,35,36,12,18,30,45,55, 32,32,32,32,32], 'City':['City_A']*5 + ['City_B']*5 + ['City_C']*5})\n",
     "df"
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +539,7 @@
     "## Activity - Compute 75% Percentile for Fare in Titanic\n",
     "We want to compute:\n",
     "\n",
-    "- At which dollar amount did 75 percent of the passengers pay less than the Fare amount?\n",
+    "- What fare value did 75% of all the fare values fall below\n",
     "\n",
     "How would we do this?\n",
     "\n",
@@ -549,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -558,12 +559,16 @@
        "31.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df = pd.read_csv(\"Datasets/titanic.csv\")\n",
+    "df\n",
+    "np.percentile(df['Fare'], 75)"
+   ]
   },
   {
    "cell_type": "markdown",
